# mlflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.py
src/: main.py
